--- a/CORE/Hollow_Clock/platformio.ini
+++ b/CORE/Hollow_Clock/platformio.ini
@@ -11,5 +11,6 @@
 [env:uno]
 platform = atmelavr
 board = uno
+monitor_speed = 9600
 framework = arduino
 lib_deps = arduino-libraries/Stepper@^1.1.3
